--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
    <h3>Heading 3</h3>
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium facere magnam enim veniam reiciendis fugit similique quam sapiente ullam temporibus.</p>
  -->
-   <a href="#" class="link-arrow">Learn more</a>
+   <span class="badge badge--secondary badge--small">10% Off</span>
   </body>
 </html>
