--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
    <h3>Heading 3</h3>
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium facere magnam enim veniam reiciendis fugit similique quam sapiente ullam temporibus.</p>
  -->
-   <span class="badge badge--secondary badge--small">10% Off</span>
+   <ul class="list list--tick">
+    <li class="list__item">Item 1</li>
+    <li class="list__item">Item 2</li>
+    <li class="list__item">Item 3</li>
+   </ul>
   </body>
 </html>
