--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
    <h3>Heading 3</h3>
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium facere magnam enim veniam reiciendis fugit similique quam sapiente ullam temporibus.</p>
  -->
-    
+   <button class="btn btn--outline btn--block">Get Started</button>
+   <a href="" class="btn btn--secondary btn--block">Buy now</a>
   </body>
 </html>
