Buil grid component

--- a/index.html
+++ b/index.html
@@ -20,27 +20,9 @@
    <h3>Heading 3</h3>
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium facere magnam enim veniam reiciendis fugit similique quam sapiente ullam temporibus.</p>
  -->
-    <blockquote class="quote">
-      <p class="quote__text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit,
-        cupiditate! Ipsum minus ab obcaecati nostrum laborum repellat.
-        Assumenda, ex aut.
-      </p>
-      <footer>
-        <div class="media">
-          <div class="media__image">
-            <svg class="icon icon--primary quote__line">
-              <use xlink:href="images/sprite.svg#line"></use>
-            </svg>
-          </div>
-          <div class="media__body">
-            <h3 class="media__tittle quote__author">John Smith</h3>
-            <p class="quote__organization">
-              ABC Company
-            </p>
-          </div>
-        </div>
-      </footer>
-    </blockquote>
+    <div class="grid grid--1x2">
+      <div style="height: 100px; background: gold"></div>
+      <div style="height: 100px; background: dodgerblue"></div>
+    </div>
   </body>
 </html>
