--- a/index.html
+++ b/index.html
@@ -20,18 +20,24 @@
    <h3>Heading 3</h3>
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium facere magnam enim veniam reiciendis fugit similique quam sapiente ullam temporibus.</p>
  -->
-    <div class="collapsible collapsible--expanded">
-      <header class="collapsible__header">
-        <h2 class="collapsible__heading">Item 1</h2>
-        <svg class="icon icon--primary collapsible__chevron">
-          <use xlink:href="images/sprite.svg#quotes"></use>
-        </svg>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="block__heading">Heading</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita totam
+          odit sit quidem dicta ex asperiores quos voluptate neque inventore.
+        </p>
       </header>
-      <div class="collapsible__content">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea,
-        asperiores.
+    </section>
+    <section class="block block--dark block--skewed-left">
+      <div class="block__header container">
+        <h2 class="block__heading">Heading</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita totam
+          odit sit quidem dicta ex asperiores quos voluptate neque inventore.
+        </p>
       </div>
-    </div>
+    </section>
     <script src="js/main.js"></script>
   </body>
 </html>
