--- a/index.html
+++ b/index.html
@@ -20,24 +20,18 @@
    <h3>Heading 3</h3>
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium facere magnam enim veniam reiciendis fugit similique quam sapiente ullam temporibus.</p>
  -->
-    <section class="block container">
-      <header class="block__header">
-        <h2 class="block__heading">Heading</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita totam
-          odit sit quidem dicta ex asperiores quos voluptate neque inventore.
-        </p>
-      </header>
-    </section>
-    <section class="block block--dark block--skewed-left">
-      <div class="block__header container">
-        <h2 class="block__heading">Heading</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita totam
-          odit sit quidem dicta ex asperiores quos voluptate neque inventore.
-        </p>
-      </div>
-    </section>
+    <nav class="nav collapsible collapsible--expanded">
+      <a class="nav__brand" href="/"><img src="images/logo.svg" alt=""></a>
+      <svg class="icon icon--white nav__toggler">
+        <use xlink:href="images/sprite.svg#menu"></use>
+      </svg>
+      <ul class="list nav__list collapsible__content">
+        <li class="nav__item"><a href="#">Hosting</a></li>
+        <li class="nav__item"><a href="#">VPS</a></li>
+        <li class="nav__item"><a href="#">Domain</a></li>
+        <li class="nav__item"><a href="#">Pricing</a></li>
+      </ul>
+    </nav>
     <script src="js/main.js"></script>
   </body>
 </html>
