--- a/index.html
+++ b/index.html
@@ -20,18 +20,17 @@
    <h3>Heading 3</h3>
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium facere magnam enim veniam reiciendis fugit similique quam sapiente ullam temporibus.</p>
  -->
-    <nav class="nav collapsible collapsible--expanded">
-      <a class="nav__brand" href="/"><img src="images/logo.svg" alt=""></a>
-      <svg class="icon icon--white nav__toggler">
-        <use xlink:href="images/sprite.svg#menu"></use>
-      </svg>
-      <ul class="list nav__list collapsible__content">
-        <li class="nav__item"><a href="#">Hosting</a></li>
-        <li class="nav__item"><a href="#">VPS</a></li>
-        <li class="nav__item"><a href="#">Domain</a></li>
-        <li class="nav__item"><a href="#">Pricing</a></li>
-      </ul>
-    </nav>
+    <section class="block block--dark block--skewed-left hero">
+      <div class="container grid grid--1x2">
+        <header class="block__header hero__content">
+          <h1 class="block__heading">Cloud Hosting for Pros</h1>
+          <p class="hero__tagline">Deploy your wesites in less than 60 seconds.</p>
+          <a href="" class="btn btn--accent btn--stretched">Get started</a>
+        </header>
+        <img class="hero__image" src="images/banner.png" alt="">
+      </div>
+    </section>
+
     <script src="js/main.js"></script>
   </body>
 </html>
