--- a/index.html
+++ b/index.html
@@ -20,70 +20,49 @@
    <h3>Heading 3</h3>
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium facere magnam enim veniam reiciendis fugit similique quam sapiente ullam temporibus.</p>
  -->
-    <section class="block block--dark block--skewed-right block-showcase">
+    <section class="block">
       <header class="block__header">
-        <h2>User-friendly Control Panel</h2>
+        <h2>What our Customer are Saying</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur necessitatibus sed, eum possimus accusantium qui.</p>
       </header>
-      <div class="container grid grid--1x2">
-        <picture class="block-showcase__image">
-          <source type="images/webp" srcset="images/ipad.webp 1x, images/ipad@2x.webp 2x">
-          <source type="images/png" srcset="images/ipad.png 1x, images/ipad@2x.png 2x">
-          <img  src="images/ipad.png" alt="" />
-        </picture>
-        <ul class="list">
-          <li>
-            <div class="media">
-              <div class="media__image">
-                <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#snap"></use>
+      <div class="container">
+        <div class="card testimonial">
+          <div class="grid grid--1x2">
+            <div class="testimonial__image">
+              <img
+                src="images/testimonial.jpg"
+                alt="A happy, smiling customer"
+              />
+              <span class="icon-container icon-container--accent">
+                <svg class="icon icon--white icon--small">
+                  <use xlink:href="images/sprite.svg#quotes"></use>
                 </svg>
-              </div>
-              <div class="media__body">
-                <h3 class="media__tittle">Easy Start & Managed Updates</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis,
-                  sit?
-                </p>
-              </div>
+              </span>
             </div>
-          </li>
-          <li>
-            <li>
-              <div class="media">
-                <div class="media__image">
-                  <svg class="icon icon--primary">
-                    <use xlink:href="images/sprite.svg#growth"></use>
-                  </svg>
+            <blockquote class="quote">
+              <p class="quote__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit,
+                cupiditate! Ipsum minus ab obcaecati nostrum laborum repellat.
+                Assumenda, ex aut.
+              </p>
+              <footer>
+                <div class="media">
+                  <div class="media__image">
+                    <svg class="icon icon--primary quote__line">
+                      <use xlink:href="images/sprite.svg#line"></use>
+                    </svg>
+                  </div>
+                  <div class="media__body">
+                    <h3 class="media__tittle quote__author">John Smith</h3>
+                    <p class="quote__organization">
+                      ABC Company
+                    </p>
+                  </div>
                 </div>
-                <div class="media__body">
-                  <h3 class="media__tittle">Easy Start & Managed Updates</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis,
-                    sit?
-                  </p>
-                </div>
-              </div>
-            </li>
-          </li>
-          <li>
-            <li>
-              <div class="media">
-                <div class="media__image">
-                  <svg class="icon icon--primary">
-                    <use xlink:href="images/sprite.svg#wordpress"></use>
-                  </svg>
-                </div>
-                <div class="media__body">
-                  <h3 class="media__tittle">Easy Start & Managed Updates</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis,
-                    sit?
-                  </p>
-                </div>
-              </div>
-            </li>
-          </li>
-        </ul>
+              </footer>
+            </blockquote>
+          </div>
+        </div>
       </div>
     </section>
 
