--- a/index.html
+++ b/index.html
@@ -20,52 +20,54 @@
    <h3>Heading 3</h3>
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium facere magnam enim veniam reiciendis fugit similique quam sapiente ullam temporibus.</p>
  -->
-    <section class="block">
-      <header class="block__header">
-        <h2>What our Customer are Saying</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur necessitatibus sed, eum possimus accusantium qui.</p>
-      </header>
-      <div class="container">
-        <div class="card testimonial">
-          <div class="grid grid--1x2">
-            <div class="testimonial__image">
-              <img
-                src="images/testimonial.jpg"
-                alt="A happy, smiling customer"
-              />
-              <span class="icon-container icon-container--accent">
-                <svg class="icon icon--white icon--small">
-                  <use xlink:href="images/sprite.svg#quotes"></use>
-                </svg>
-              </span>
-            </div>
-            <blockquote class="quote">
-              <p class="quote__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit,
-                cupiditate! Ipsum minus ab obcaecati nostrum laborum repellat.
-                Assumenda, ex aut.
-              </p>
-              <footer>
-                <div class="media">
-                  <div class="media__image">
-                    <svg class="icon icon--primary quote__line">
-                      <use xlink:href="images/sprite.svg#line"></use>
-                    </svg>
-                  </div>
-                  <div class="media__body">
-                    <h3 class="media__tittle quote__author">John Smith</h3>
-                    <p class="quote__organization">
-                      ABC Company
-                    </p>
-                  </div>
-                </div>
-              </footer>
-            </blockquote>
-          </div>
-        </div>
-      </div>
-    </section>
 
+    <footer class="block block--dark footer">
+      <div class="container grid footer__sections">
+        <section class="collapsible collapsible--expanded footer__section">
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading footer_heading">Products</h2>
+            <svg class="icon icon--primary collapsible__chevron">
+              <use xlink:href="images/sprite.svg#quotes"></use>
+            </svg>
+          </header>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">Website Hosting</a></li>
+              <li><a href="#">Free Automated Wordpress</a></li>
+              <li><a href="#">Migrations</a></li>
+            </ul>
+          </div>
+        </section>
+        <section class="collapsible footer__section">
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading footer_heading">Item 2</h2>
+            <svg class="icon icon--primary collapsible__chevron">
+              <use xlink:href="images/sprite.svg#quotes"></use>
+            </svg>
+          </header>
+          <div class="collapsible__content">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea,
+            asperiores.
+          </div>
+        </section>
+        <section class="collapsible footer__section">
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading footer_heading">Item 3</h2>
+            <svg class="icon icon--primary collapsible__chevron">
+              <use xlink:href="images/sprite.svg#quotes"></use>
+            </svg>
+          </header>
+          <div class="collapsible__content">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea,
+            asperiores.
+          </div>
+        </section>
+        <section class="footer__brand">
+          <img src="images/logo.svg" alt="" />
+          <p class="footer__copyright">Copyright 2020 Mosh Hamedani</p>
+        </section>
+      </div>
+    </footer>
     <script src="js/main.js"></script>
   </body>
 </html>
