--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <nav class="nav collapsible collapsible--expanded">
       <a class="nav__brand" href="/"><img src="images/logo.svg" alt=""></a>
       <svg class="icon icon--white nav__toggler">
-        <use xlink:href="images/sprite.svg#menu"></use>
+        <use href="images/sprite.svg#menu"></use>
       </svg>
       <ul class="list nav__list collapsible__content">
         <li class="nav__item"><a href="#">Hosting</a></li>
@@ -72,7 +72,7 @@
       />
       <button class="btn btn--accent">
         <svg class="icon icon--white">
-          <use xlink:href="images/sprite.svg#search"></use>
+          <use href="images/sprite.svg#search"></use>
         </svg>Search</button>
     </div>
     <ul class="list block-domain__prices">
@@ -159,7 +159,7 @@
       <div class="feature__content" data-aos="fade-right">
         <span class="icon-container">
           <svg class="icon icon--primary">
-            <use xlink:href="images/sprite.svg#easy"></use>
+            <use href="images/sprite.svg#easy"></use>
           </svg>
         </span>
         <h3 class="feature__heading">Super Easy to Use</h3>
@@ -185,7 +185,7 @@
       <div class="feature__content">
         <span class="icon-container">
           <svg class="icon icon--primary">
-            <use xlink:href="images/sprite.svg#computer"></use>
+            <use href="images/sprite.svg#computer"></use>
           </svg>
         </span>
         <h3 class="feature__heading">Simply Fast Websites</h3>
@@ -211,7 +211,7 @@
       <div class="feature__content">
         <span class="icon-container">
           <svg class="icon icon--primary">
-            <use xlink:href="images/sprite.svg#wordpress"></use>
+            <use href="images/sprite.svg#wordpress"></use>
           </svg>
         </span>
         <h3 class="feature__heading">Wordpress Made Easy</h3>
@@ -237,7 +237,7 @@
       <div class="feature__content">
         <span class="icon-container">
           <svg class="icon icon--primary">
-            <use xlink:href="images/sprite.svg#clock"></use>
+            <use href="images/sprite.svg#clock"></use>
           </svg>
         </span>
         <h3 class="feature__heading">24/7 Expert Support</h3>
@@ -275,7 +275,7 @@
           <div class="media">
             <div class="media__image">
               <svg class="icon icon--primary">
-                <use xlink:href="images/sprite.svg#snap"></use>
+                <use href="images/sprite.svg#snap"></use>
               </svg>
             </div>
             <div class="media__body">
@@ -292,7 +292,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#growth"></use>
+                  <use href="images/sprite.svg#growth"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -310,7 +310,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#wordpress"></use>
+                  <use href="images/sprite.svg#wordpress"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -341,7 +341,7 @@
             />
             <span class="icon-container icon-container--accent">
               <svg class="icon icon--white icon--small">
-                <use xlink:href="images/sprite.svg#quotes"></use>
+                <use href="images/sprite.svg#quotes"></use>
               </svg>
             </span>
           </div>
@@ -355,7 +355,7 @@
               <div class="media">
                 <div class="media__image">
                   <svg class="icon icon--primary quote__line">
-                    <use xlink:href="images/sprite.svg#line"></use>
+                    <use href="images/sprite.svg#line"></use>
                   </svg>
                 </div>
                 <div class="media__body">
@@ -377,7 +377,7 @@
         <div class="collapsible__header">
           <h2 class="collapsible__heading footer_heading">Products</h2>
           <svg class="icon icon--primary collapsible__chevron">
-            <use xlink:href="images/sprite.svg#quotes"></use>
+            <use href="images/sprite.svg#quotes"></use>
           </svg>
         </div>
         <div class="collapsible__content">
@@ -392,7 +392,7 @@
         <header class="collapsible__header">
           <h2 class="collapsible__heading footer_heading">Item 2</h2>
           <svg class="icon icon--primary collapsible__chevron">
-            <use xlink:href="images/sprite.svg#quotes"></use>
+            <use href="images/sprite.svg#quotes"></use>
           </svg>
         </header>
         <div class="collapsible__content">
@@ -404,7 +404,7 @@
         <header class="collapsible__header">
           <h2 class="collapsible__heading footer_heading">Item 3</h2>
           <svg class="icon icon--primary collapsible__chevron">
-            <use xlink:href="images/sprite.svg#quotes"></use>
+            <use href="images/sprite.svg#quotes"></use>
           </svg>
         </header>
         <div class="collapsible__content">
