--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="CSS/normalize.css" />
     <link rel="stylesheet" href="CSS/style.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
@@ -30,7 +29,7 @@
  -->
   <header>
     <nav class="nav collapsible collapsible--expanded">
-      <a class="nav__brand" href="/"><img src="images/logo.svg" alt=""></a>
+      <a aria-label="Moshify" class="nav__brand" href="/"><img src="images/logo.svg" alt=""></a>
       <svg class="icon icon--white nav__toggler">
         <use href="images/sprite.svg#menu"></use>
       </svg>
